# cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cpp-config-version.cmake  cpp-config.cmake
src/: CMakeLists.txt  main.cpp  map.hpp
tests/: CMakeLists.txt  example-test.cpp  main.cpp
